@@ -2,10 +2,13 @@ package com.github.saphyra.apphub.service.skyxplore.data.friend.request.service;
 
 import com.github.saphyra.apphub.api.platform.message_sender.model.WebSocketEventName;
 import com.github.saphyra.apphub.api.platform.message_sender.model.WebSocketMessage;
+import com.github.saphyra.apphub.api.skyxplore.response.IncomingFriendRequestResponse;
+import com.github.saphyra.apphub.api.skyxplore.response.SentFriendRequestResponse;
 import com.github.saphyra.apphub.lib.common_domain.ErrorCode;
 import com.github.saphyra.apphub.lib.exception.ExceptionFactory;
 import com.github.saphyra.apphub.service.skyxplore.data.character.dao.CharacterDao;
 import com.github.saphyra.apphub.service.skyxplore.data.common.MessageSenderProxy;
+import com.github.saphyra.apphub.service.skyxplore.data.friend.converter.FriendRequestToResponseConverter;
 import com.github.saphyra.apphub.service.skyxplore.data.friend.friendship.dao.FriendshipDao;
 import com.github.saphyra.apphub.service.skyxplore.data.friend.request.dao.FriendRequest;
 import com.github.saphyra.apphub.service.skyxplore.data.friend.request.dao.FriendRequestDao;
@@ -14,7 +17,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Component;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.UUID;
 
 @Component
@@ -26,9 +29,10 @@ public class FriendRequestCreationService {
     private final CharacterDao characterDao;
     private final FriendRequestFactory friendRequestFactory;
     private final MessageSenderProxy messageSenderProxy;
+    private final FriendRequestToResponseConverter friendRequestToResponseConverter;
 
-    public void createFriendRequest(UUID senderId, UUID friendId) {
-        if (!characterDao.findById(friendId).isPresent()) {
+    public SentFriendRequestResponse createFriendRequest(UUID senderId, UUID friendId) {
+        if (characterDao.findById(friendId).isEmpty()) {
             throw ExceptionFactory.notLoggedException(HttpStatus.NOT_FOUND, ErrorCode.USER_NOT_FOUND, "Character not found with id " + friendId);
         }
 
@@ -43,7 +47,10 @@ public class FriendRequestCreationService {
         FriendRequest friendRequest = friendRequestFactory.create(senderId, friendId);
         friendRequestDao.save(friendRequest);
 
-        WebSocketMessage message = WebSocketMessage.forEventAndRecipients(WebSocketEventName.SKYXPLORE_MAIN_MENU_FRIEND_REQUEST_SENT, Arrays.asList(senderId, friendId));
+        IncomingFriendRequestResponse friendRequestResponse = friendRequestToResponseConverter.toIncomingFriendRequest(friendRequest);
+        WebSocketMessage message = WebSocketMessage.forEventAndRecipients(WebSocketEventName.SKYXPLORE_MAIN_MENU_FRIEND_REQUEST_SENT, List.of(friendId), friendRequestResponse);
         messageSenderProxy.sendToMainMenu(message);
+
+        return friendRequestToResponseConverter.toSentFriendRequest(friendRequest);
     }
 }
